Abilities command fixes, AttributeUtil, and some reworks